data/derived/fa15/progs/unify/prog2096.ml.out
Characters 87-88:
  | h :: t -> assoc d k 
                    ^
Error: This expression has type 'a but an expression was expected of type
         'a * 'b * ('b * ('c -> 'd)) list
       The type variable 'a occurs inside 'a * 'b * ('b * ('c -> 'd)) list
